--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "react": "18.2.0",
-    "react-native": "0.74.0"
+    "react-native": "0.74.0",
+    "react-native-pager-view": "^6.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
